# asyncwinrm

./: .editorconfig  .gitignore  LICENSE  README.md  Vagrantfile  default.nix  flake.nix  pyproject.toml
.github/workflows/: ci.yml
nix/: httpx-gssapi.nix  httpx-ntlm-fixed.nix
src/asyncwinrm/: __init__.py  auth.py  base.py  connection.py  exceptions.py  registry.py  schema.py  services.py  shell.py  soap.py  utils.py
src/asyncwinrm/auth/: basic.py  encryption.py  kerberos.py  ntlm.py  spnego.py
src/asyncwinrm/client/: __init__.py  shell.py  soap.py  winrm.py  wsman.py
src/asyncwinrm/protocol/: action.py  resource.py  shell.py  soap.py  uri.py
src/asyncwinrm/protocol/xml/: attribute.py  element.py  namespace.py
src/asyncwinrm/wmi/: base.py  registry.py  services.py
tests/: test.py
