[project]
name = "asyncwinrm"
version = "0.0.1"
description = "Asynchronous WinRM client library"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "pyspnego>=0.12.0",
    "yarl>=1.22.0",
    "httpx>=0.28.1",

    # NTLM auth
    "httpx-ntlm-fixed>=1.4.1",

    # Kerberos auth
    "httpx-gssapi>=0.6.0",
    "gssapi >= 1.6.0; sys_platform != 'win32'",
    "krb5 >= 0.3.0; sys_platform != 'win32'",
]

[tool.hatch.envs.dev]
extra-dependencies = [
    "types-lxml>=2025.11.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
