[project]
name = "asyncwinrm"
version = "0.0.3"
description = "Asynchronous WinRM client library"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "pyspnego>=0.12.0",
    "yarl>=1.22.0",
    "httpx>=0.28.1",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
kerberos = [
    "gssapi >= 1.6.0; sys_platform != 'win32'",
    "krb5 >= 0.3.0; sys_platform != 'win32'",
    "pyspnego>=0.12.0",
]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.13",
    "types-lxml>=2026.1.1",
]

[tool.ruff]
line-length = 120

[tool.pytest]
testpaths = ["tests"]
python_files = ["*.py"]
